<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgNoExpenses"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_medical" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/ETextView.MediumLarge.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/msg_no_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNoExpenses" />

    <TextView
        android:id="@+id/tvClick"
        style="@style/ETextView.Medium.DarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_6"
        android:text="@string/label_click"
        app:layout_constraintEnd_toStartOf="@+id/imgAdd"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:srcCompat="@drawable/ic_add_black" />

    <TextView
        android:id="@+id/tvToAdd"
        style="@style/ETextView.Medium.DarkGrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/label_to_add"
        app:layout_constraintStart_toEndOf="@id/imgAdd"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>