<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="newCategoryViewModel"
                type="com.jagan.spendanalayser.ui.categories.NewCategoryViewModel"/>

        <variable
                name="categoryHandler"
                type="com.jagan.spendanalayser.ui.categories.NewCategoryBottomSheet.CategoryHandler"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_16">

        <TextView
                android:id="@+id/tvAddNewCategory"
                style="@style/ETextView.Medium.Black"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_12"
                android:text="@string/title_category_new"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorTransparent"
                android:contentDescription="@null"
                android:onClick="@{view -> categoryHandler.onCancelClick(view)}"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black"/>

        <View
                android:id="@+id/divider"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_1"
                android:background="@drawable/divider"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddNewCategory"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/label_category"
                android:textColorHint="@color/colorDarkGrey"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:text="@={newCategoryViewModel.categoryName}"
                    tools:targetApi="lollipop"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnAdd"
                style="@style/EButton.ColorAccent"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_16"
                android:onClick="@{view -> categoryHandler.onAddClick(view)}"
                android:text="@string/label_add_category"
                app:enableButton="@{newCategoryViewModel.enableAddButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCategory"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>